objects/lightsideapps__Query_Object__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Filter_Logic__c</fullName>
        <description>If null, then all AND&apos;s are used for all filters</description>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Limit__c</fullName>
        <label>Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Object__c</fullName>
        <description>What Salesforce Object is being queried. Normally set via a VF Page with coded picklist of Objects available.</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__QueryString__c</fullName>
        <description>String storing the calculated Query as per the related records.</description>
        <label>QueryString</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Query Object</label>
    <nameField>
        <displayFormat>QObject-{00000}</displayFormat>
        <label>Query Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>